--- a/tmpl/upload.html
+++ b/tmpl/upload.html
@@ -10,8 +10,9 @@
       <div class="message">{{.}}</div>
       <form class="form-signin" method="post" action="/upload" enctype="multipart/form-data">
           <fieldset>
-            <input type="file" name="file" id="file" multiple="multiple">
-            <input type="submit" name="submit" value="Submit">
+            <p><label for="folder">Folder: <input type="text" name="folder" id="folder"></label></p>
+            <p><label for="file">Files: <input type="file" name="file" id="file" multiple="multiple"></label></p>
+            <p><input type="submit" name="submit" value="Submit"></p>
         </fieldset>
       </form>
     </div>
