--- a/tmpl/upload.html
+++ b/tmpl/upload.html
@@ -10,7 +10,8 @@
       <div class="message">{{.}}</div>
       <form class="form-signin" method="post" action="/upload" enctype="multipart/form-data">
           <fieldset>
-            <p><label for="folder">Folder: <input type="text" name="folder" id="folder"></label></p>
+            <p><label for="folder">Folder: <input type="text" name="folder" id="folder" placeholder="/test/"></label></p>
+            <p><label for="callback">Callback: <input type="text" name="callback" id="callback" placeholder="http://localhost:3000/seafile_uploads"></label></p>
             <p><label for="file">Files: <input type="file" name="file" id="file" multiple="multiple"></label></p>
             <p><input type="submit" name="submit" value="Submit"></p>
         </fieldset>
