ADD checks that file or directory already exist before any action. Proper json parsing

--- a/tmpl/upload.html
+++ b/tmpl/upload.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>File Upload Demo</title>
+    <title>SeaFile Upload</title>
     <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>File Upload Demo</h1>
+      <h1>SeaFile Upload</h1>
       <div class="message">{{.}}</div>
       <form class="form-signin" method="post" action="/upload" enctype="multipart/form-data">
           <fieldset>
